--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,19 @@
 name = "numberer"
 version = "0.1.0"
 authors = ["Daniël de Kok <me@danieldk.eu>"]
+description = "Turn things into numbers and numbers into things"
+homepage = "https://github.com/stickeritis/numberer"
 edition = "2018"
+# Use after SPDX list is updated
+# license = "BlueOak-1.0.0"
+license-file = "LICENSE.md"
+
+exclude = [
+  ".gitignore",
+  ".github",
+  ".envrc",
+  "shell.nix",
+]
 
 [dependencies]
 serde = "1"
