--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,7 @@ authors = ["Daniël de Kok <me@danieldk.eu>"]
 description = "Turn things into numbers and numbers into things"
 homepage = "https://github.com/stickeritis/numberer"
 edition = "2018"
-# Use after SPDX list is updated
-# license = "BlueOak-1.0.0"
-license-file = "LICENSE.md"
+license = "MIT OR Apache-2.0"
 
 exclude = [
   ".gitignore",
